--- a/style.css
+++ b/style.css
@@ -16,32 +16,48 @@ body{
 }
 
 .container{
-    width: 40%;
+    width: 30%;
     height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
     background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(244,246,255,1) 39%, rgba(247,248,255,1) 69%, rgba(247,254,255,1) 100%);
+    background: linear-gradient(180deg, rgb(156, 225, 255) 0%, rgb(123, 209, 255) 39%, rgb(197, 238, 252) 69%, rgba(247,254,255,1) 100%);
     box-shadow: 0px 0px 125px -32px rgba(0,0,0,0.22);
+    border: 3px solid rgb(0, 0, 0);
+}
+
+.row{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .screen{
-    width: 100%;
+    width: 95%;
     height: 30%;
     border-radius: 10px;
     display: flex;
     justify-content: right;
     align-items: center;
-    padding: 0 8vh;
+    padding: 0 4vh;
+    box-shadow: inset 0px 0px 5px -4px rgba(0,0,0,0.75);
+    margin: 2vh;
+    font-size: 2.5rem;
+    font-weight: bold;
+    background: #00415b ;
+    color: #e8e8e8;
+    border: 3px solid rgb(0, 0, 0);
 }
 
 .buttons{
     width: 100%;
     height: 70%;
-    display: inline-flex;
-    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
@@ -55,8 +71,8 @@ button {
     border: 2px solid rgb(237, 251, 255);
     border-radius: 50%;
     box-shadow: 0.1em 0.1em;
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -71,4 +87,43 @@ button {
   button:active {
     transform: translate(0.05em, 0.05em);
     box-shadow: 0.05em 0.05em;
+  }
+
+  .button--operator{
+    /* background: #5dc9f4; */
+    /* background: rgb(55,247,255);
+    background: linear-gradient(144deg, rgba(55,247,255,1) 0%, rgba(138,231,255,1) 24%, rgba(247,248,255,1) 75%, rgba(247,254,255,1) 100%); */
+    background: rgb(55,247,255);
+    background: linear-gradient(22deg, rgba(55,247,255,1) 0%, rgba(138,231,255,1) 24%, rgba(247,248,255,1) 75%, rgba(247,254,255,1) 100%);
+    border: 2px solid rgb(198, 243, 255);
+    color: #00415b; 
+  }
+
+  .button--equal{
+    background: #00415b;
+    border: 2px solid rgb(0, 94, 120);
+    color: #888d8e; 
+  }
+
+  .button--ac{
+    background: #ffe600;
+    border: 2px solid rgb(255, 243, 115);
+    color: #000000; 
+  }
+
+  .button--percent, .button--sign{
+    background: rgb(255,232,55);
+    background: linear-gradient(24deg, rgba(255,232,55,1) 0%, rgba(255,250,138,1) 35%, rgba(247,248,255,1) 81%, rgba(247,254,255,1) 100%);
+    border: 2px solid rgb(255, 248, 171);
+    color: #6e6100; 
+  }
+
+  .row:last-child{
+    margin-bottom: 2vh;
+  }
+
+  @media screen and (max-width: 768px){
+    .container{
+        width: 80%;
+    }
   }
