--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ body{
 }
 
 .container{
-    width: 30%;
+    width: 25%;
     height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
-    background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgb(156, 225, 255) 0%, rgb(123, 209, 255) 39%, rgb(197, 238, 252) 69%, rgba(247,254,255,1) 100%);
+    background: rgb(156, 225, 255);
+    background: linear-gradient(180deg, rgb(0, 49, 70) 0%, rgb(0, 34, 53) 39%, rgb(0, 24, 32) 69%);
     box-shadow: 0px 0px 125px -32px rgba(0,0,0,0.22);
     border: 3px solid rgb(0, 0, 0);
 }
@@ -44,13 +44,14 @@ body{
     justify-content: right;
     align-items: center;
     padding: 0 4vh;
-    box-shadow: inset 0px 0px 5px -4px rgba(0,0,0,0.75);
+    box-shadow: inset 2px 2px 15px -6px rgba(0,0,0,0.75);
     margin: 2vh;
     font-size: 2.5rem;
     font-weight: bold;
-    background: #00415b ;
+    background: #123a4a ;
     color: #e8e8e8;
     border: 3px solid rgb(0, 0, 0);
+    
 }
 
 .buttons{
@@ -93,17 +94,28 @@ button {
     /* background: #5dc9f4; */
     /* background: rgb(55,247,255);
     background: linear-gradient(144deg, rgba(55,247,255,1) 0%, rgba(138,231,255,1) 24%, rgba(247,248,255,1) 75%, rgba(247,254,255,1) 100%); */
-    background: rgb(55,247,255);
-    background: linear-gradient(22deg, rgba(55,247,255,1) 0%, rgba(138,231,255,1) 24%, rgba(247,248,255,1) 75%, rgba(247,254,255,1) 100%);
+    background: rgb(171, 217, 227);
+    /* background: linear-gradient(22deg, rgba(55,247,255,1) 0%, rgba(138,231,255,1) 24%, rgba(247,248,255,1) 75%, rgba(247,254,255,1) 100%); */
     border: 2px solid rgb(198, 243, 255);
     color: #00415b; 
   }
 
+  
   .button--equal{
-    background: #00415b;
-    border: 2px solid rgb(0, 94, 120);
-    color: #888d8e; 
+    /* background: #0c4358;
+    border: 2px solid rgb(0, 49, 62);
+    color: #e3e3e3;  */
+    background: rgb(63, 155, 175);
+    /* background: linear-gradient(22deg, rgba(55,247,255,1) 0%, rgba(138,231,255,1) 24%, rgba(247,248,255,1) 75%, rgba(247,254,255,1) 100%); */
+    border: 2px solid rgb(99, 190, 215);
+    color: #00415b; 
   }
+
+  .button-delete{
+    background: #e3e3e3;
+  }
+
+  
 
   .button--ac{
     background: #ffe600;
@@ -122,7 +134,7 @@ button {
     margin-bottom: 2vh;
   }
 
-  @media screen and (max-width: 768px){
+  @media screen and (max-width: 810px){
     .container{
         width: 80%;
     }
