--- a/style.css
+++ b/style.css
@@ -1,9 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap');
+
+@font-face {
+  font-family: 'Eurostile Extended';
+  src: url('fonts/EurostileExtended-Black.eot');
+  src: url('fonts/EurostileExtended-Black.eot?#iefix') format('embedded-opentype'),
+      url('fonts/EurostileExtended-Black.woff2') format('woff2'),
+      url('fonts/EurostileExtended-Black.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Digital-7';
+  src: url('fonts/Digital-7.eot');
+  src: url('fonts/Digital-7.eot?#iefix') format('embedded-opentype'),
+      url('fonts/Digital-7.woff2') format('woff2'),
+      url('fonts/Digital-7.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Eurostile Extended';
+  src: url('fonts/EurostileExtended-Roman.eot');
+  src: url('fonts/EurostileExtended-Roman.eot?#iefix') format('embedded-opentype'),
+      url('fonts/EurostileExtended-Roman.woff2') format('woff2'),
+      url('fonts/EurostileExtended-Roman.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Eurostile Extended';
+  src: url('fonts/EurostileExtended-Black.eot');
+  src: url('fonts/EurostileExtended-Black.eot?#iefix') format('embedded-opentype'),
+      url('fonts/EurostileExtended-Black.woff2') format('woff2'),
+      url('fonts/EurostileExtended-Black.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Orbitron', sans-serif;
+    font-family: 'Eurostile Extended', sans-serif;
 }
 
 body{
@@ -16,7 +62,7 @@ body{
 }
 
 .container{
-    width: 25%;
+    width: 30%;
     height: 90vh;
     display: flex;
     flex-direction: column;
@@ -36,9 +82,30 @@ body{
     align-items: center;
 }
 
+.logo{
+  font-family: 'Eurostile Extended';
+  font-weight: bold;
+}
+
+.model{
+  font-family: sans-serif;
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+
+.header{
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 1.5rem;
+    color: #e8e8e8;
+}
+
 .screen{
-    width: 95%;
-    height: 30%;
+    width: 85%;
+    height: 20%;
     border-radius: 10px;
     display: flex;
     justify-content: right;
@@ -51,6 +118,7 @@ body{
     background: #123a4a ;
     color: #e8e8e8;
     border: 3px solid rgb(0, 0, 0);
+    font-family: 'Digital-7', sans-serif;
     
 }
 
@@ -138,18 +206,20 @@ button {
     display:flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 2vh;
+    /* gap: 2vh; */
     padding:0;
     align-items: flex-end;
+    font-family: 'Digital-7', sans-serif;
   }
 
-  .screen__output--current{
+  /* .screen__output--current{
         font-size: 1.2rem;
         font-weight: 500;
         color: #e8e8e8;
         margin:0;
         padding:0;
         height: 5vh;
+        font-family: 'digital-7', sans-serif;
   }
 
     .screen__output--previous{
@@ -159,7 +229,8 @@ button {
         margin:0;
         padding:0;
         height:10vh;
-    }
+        font-family: 'digital-7', sans-serif;
+    } */
 
   @media screen and (max-width: 810px){
     .container{
@@ -181,6 +252,6 @@ button {
 
     @media screen and (min-width: 1200px){
         .container{
-            width: 25%;
+            width: 30%;
         }
     }
