--- a/style.css
+++ b/style.css
@@ -71,7 +71,18 @@ body{
     background: rgb(156, 225, 255);
     background: linear-gradient(180deg, rgb(0, 49, 70) 0%, rgb(0, 34, 53) 39%, rgb(0, 24, 32) 69%);
     box-shadow: 0px 0px 125px -32px rgba(0,0,0,0.22);
-    border: 3px solid rgb(0, 0, 0);
+    background-color: #333;
+    background-image: linear-gradient(90deg, #e6ebee, #f0f0f0);
+    box-shadow: 0px 0px 0px 0px #b1b8c0 inset, 0px -10px 10px 10px #b1b8c0 inset, 0px 1px 0px 2px #b1b8c0 inset, 0 55px 10px -25px rgba(0,0,0,0.1), 0 65px 30px -10px rgba(0,0,0,0.5);
+}
+
+.out{
+  height: 92vh;
+  width: 27%;
+  border-radius: 5px;
+  position: absolute;
+  background-color: #333;
+  z-index: -1;
 }
 
 .row{
@@ -88,9 +99,14 @@ body{
 }
 
 .model{
-  font-family: sans-serif;
+  font-family: 'CMU Typewriter Text';
+  font-style: italic;
   font-size: 0.8rem;
   font-weight: bold;
+}
+
+.bta3etelshams{
+
 }
 
 .header{
@@ -100,7 +116,7 @@ body{
     justify-content: space-around;
     align-items: center;
     font-size: 1.5rem;
-    color: #e8e8e8;
+    color: #373737;
 }
 
 .screen{
@@ -111,11 +127,12 @@ body{
     justify-content: right;
     align-items: center;
     padding: 0 4vh;
-    box-shadow: inset 2px 2px 15px -6px rgba(0,0,0,0.75);
+    /* box-shadow: inset 2px 2px 15px -6px rgba(0,0,0,0.75); */
     margin: 2vh;
     font-size: 2.5rem;
     font-weight: bold;
-    background: #123a4a ;
+    background: #99a883;
+    box-shadow: 0 5px 20px 0.05px #130f0a inset, 5px 0 10px -4px #130f0a inset, -0.5px 0 3px 1px #130f0a inset, 0 0 0 2px rgba(0,0,0,1), 0 65px 50px -10px rgba(0,0,0,-0.05);
     color: #e8e8e8;
     border: 3px solid rgb(0, 0, 0);
     font-family: 'Digital-7', sans-serif;
@@ -236,11 +253,17 @@ button {
     .container{
         width: 80%;
     }
+    .out{
+      width: 75%;
+    }
   }
 
     @media screen and (max-width: 500px){
         .container{
             width: 90%;
+        }
+        .out{
+          width: 80%;
         }
     }
 
@@ -248,10 +271,16 @@ button {
         .container{
             width: 50%;
         }
+        .out{
+          width: 45%;
+        }
     }
 
     @media screen and (min-width: 1200px){
         .container{
             width: 30%;
+        }
+        .out{
+          width: 27%;
         }
     }
